feature - prepare release 0.2.7. Code is feature complete